loopfor.LoopCourseForest.scala.error
Erreur de compilation :
LoopCourseForest:3: error: not found: value gauceh
      avance(); avance(); avance(); avance(); gauche(); avance(); avance(); droite(); avance(); avance(); avance(); avance(); droite(); avance(); avance(); gauche(); avance(); avance(); avance(); avance(); gauceh();
                                                                                                                                                                                                              ^